@@ -36,6 +36,12 @@ public class MidiUtils {
 	public static final int[] cDim4 = { Pitches.C4, Pitches.EF4, Pitches.GF4 };
 	public static final int[] cMaj7th4 = { Pitches.C4, Pitches.E4, Pitches.G4, Pitches.B4 };
 	public static final int[] cMin7th4 = { Pitches.C4, Pitches.EF4, Pitches.G4, Pitches.BF4 };
+	public static final int[] c9th4 = { Pitches.C4, Pitches.E4, Pitches.G4, Pitches.BF4,
+			Pitches.D5 };
+	public static final int[] c13th4 = { Pitches.C4, Pitches.E4, Pitches.G4, Pitches.BF4,
+			Pitches.D5, Pitches.A5 };
+	
+	public static final int[] SPICE_SELECT = { 10, 100, 1000, 10000, 100000, 1000000 };
 	
 	
 	public static final Map<Integer, List<Integer>> cpRulesMap = createChordProgressionRulesMap();
@@ -88,6 +94,8 @@ public class MidiUtils {
 			chordMap.put(1000 * i, transposeChord(cDim4, diaTransMap.get(i)));
 			chordMap.put(10000 * i, transposeChord(cMaj7th4, diaTransMap.get(i)));
 			chordMap.put(100000 * i, transposeChord(cMin7th4, diaTransMap.get(i)));
+			chordMap.put(1000000 * i, transposeChord(c9th4, diaTransMap.get(i)));
+			chordMap.put(10000000 * i, transposeChord(c13th4, diaTransMap.get(i)));
 		}
 		return chordMap;
 		
@@ -134,6 +142,37 @@ public class MidiUtils {
 	public static int[] mappedChord(Integer chordInt) {
 		int[] mappedChord = chordsMap.get(chordInt);
 		return Arrays.copyOf(mappedChord, mappedChord.length);
+	}
+	
+	public static int[] convertChordToLength(int[] chord, int length, boolean conversionNeeded) {
+		int[] chordCopy = Arrays.copyOf(chord, chord.length);
+		
+		if (!conversionNeeded || chord.length == length) {
+			return chordCopy;
+		}
+		int[] converted = new int[length];
+		if (chord.length < length) {
+			// repeat from start with +12 transpose
+			for (int i = 0; i < length; i++) {
+				converted[i] = chordCopy[(i % chord.length)] + 12 * (i / chord.length);
+			}
+		} else {
+			// alternate from beginning and end
+			int filled = 0;
+			int frontIndex = 0;
+			int backIndex = 0;
+			while (filled < length) {
+				if (filled % 2 == 0) {
+					converted[frontIndex] = chordCopy[frontIndex];
+					frontIndex++;
+				} else {
+					converted[length - backIndex - 1] = chordCopy[chord.length - backIndex - 1];
+					backIndex++;
+				}
+				filled++;
+			}
+		}
+		return converted;
 	}
 	
 	public static CPhrase chordProgressionToPhrase(List<int[]> cpr) {
@@ -227,7 +266,7 @@ public class MidiUtils {
 		
 		for (int j = 0; j < chord.length; j++) {
 			int pitch = chord[j];
-			int originalIndex = modeList.indexOf(new Integer(pitch % 12));
+			int originalIndex = modeList.indexOf(Integer.valueOf(pitch % 12));
 			
 			if (originalIndex == -1) {
 				transposedChord[j] = pitch - 1;
@@ -245,73 +284,72 @@ public class MidiUtils {
 		return transposedChord;
 	}
 	
-	public static final String[] INSTRUMENTS_NAMES = { "PIANO = 0", "BRIGHT_ACOUSTIC = 1",
-			"ELECTRIC_GRAND = 2", "HONKYTONK = 3", "EPIANO = 4", "EPIANO2 = 5", "HARPSICHORD = 6",
-			"CLAV = 7", "CELESTE = 8", "GLOCKENSPIEL = 9", "MUSIC_BOX = 10", "VIBRAPHONE = 11",
-			"MARIMBA = 12", "XYLOPHONE = 13", "TUBULAR_BELL = 14", "NOTHING = 15", "ORGAN = 16",
-			"ORGAN2 = 17", "ORGAN3 = 18", "CHURCH_ORGAN = 19", "REED_ORGAN = 20", "ACCORDION = 21",
-			"HARMONICA = 22", "BANDNEON = 23", "NYLON_GUITAR = 24", "STEEL_GUITAR = 25",
-			"JAZZ_GUITAR = 26", "CLEAN_GUITAR = 27", "MUTED_GUITAR = 28", "OVERDRIVE_GUITAR = 29",
-			"DISTORTED_GUITAR = 30", "GUITAR_HARMONICS = 31", "ACOUSTIC_BASS = 32",
-			"FINGERED_BASS = 33", "PICKED_BASS = 34", "FRETLESS_BASS = 35", "SLAP_BASS = 36",
-			"SLAP_BASS_2 = 37", "SYNTH_BASS = 38", "SYNTH_BASS_2 = 39", "VIOLIN = 40", "VIOLA = 41",
-			"CELLO = 42", "CONTRABASS = 43", "TREMOLO_STRINGS = 44", "PIZZICATO_STRINGS = 45",
-			"HARP = 46", "TIMPANI = 47", "STRINGS = 48", "STRING_ENSEMBLE_2 = 49",
-			"SYNTH_STRINGS = 50", "SLOW_STRINGS = 51", "AAH = 52", "OOH = 53", "SYNVOX = 54",
-			"ORCHESTRA_HIT = 55", "TRUMPET = 56", "TROMBONE = 57", "TUBA = 58",
-			"MUTED_TRUMPET = 59", "FRENCH_HORN = 60", "BRASS = 61", "SYNTH_BRASS = 62",
-			"SYNTH_BRASS_2 = 63", "SOPRANO_SAX = 64", "ALTO_SAX = 65", "SAXOPHONE = 66",
-			"BARITONE_SAX = 67", "OBOE = 68", "ENGLISH_HORN = 69", "BASSOON = 70", "CLARINET = 71",
-			"PICCOLO = 72", "FLUTE = 73", "RECORDER = 74", "PAN_FLUTE = 75", "BOTTLE_BLOW = 76",
-			"SHAKUHACHI = 77", "WHISTLE = 78", "OCARINA = 79", "GMSQUARE_WAVE = 80",
-			"GMSAW_WAVE = 81", "SYNTH_CALLIOPE = 82", "CHIFFER_LEAD = 83", "CHARANG = 84",
-			"SOLO_VOX = 85", "WHOKNOWS1 = 86", "WHOKNOWS2 = 87", "FANTASIA = 88", "WARM_PAD = 89",
-			"POLYSYNTH = 90", "SPACE_VOICE = 91", "BOWED_GLASS = 92", "METAL_PAD = 93",
-			"HALO_PAD = 94", "SWEEP_PAD = 95", "ICE_RAIN = 96", "SOUNDTRACK = 97", "CRYSTAL = 98",
-			"ATMOSPHERE = 99", "BRIGHTNESS = 100", "GOBLIN = 101", "ECHO_DROPS = 102",
-			"STAR_THEME = 103", "SITAR = 104", "BANJO = 105", "SHAMISEN = 106", "KOTO = 107",
-			"KALIMBA = 108", "BAGPIPES = 109", "FIDDLE = 110", "SHANNAI = 111", "TINKLE_BELL = 112",
-			"AGOGO = 113", "STEEL_DRUMS = 114", "WOODBLOCK = 115", "TAIKO = 116", "TOM = 117",
-			"SYNTH_DRUM = 118", "REVERSE_CYMBAL = 119", "FRETNOISE = 120", "BREATHNOISE = 121",
-			"NATURE = 122", "BIRD = 123", "TELEPHONE = 124", "HELICOPTER = 125", "APPLAUSE = 126",
-			"GUNSHOT = 127" };
+	public static final String[] INSTRUMENTS_NAMES = { "PIANO = 0 ", "BRIGHT_ACOUSTIC = 1 ",
+			"ELECTRIC_GRAND = 2 ", "HONKYTONK = 3 ", "EPIANO = 4 ", "EPIANO2 = 5 ",
+			"HARPSICHORD = 6 ", "CLAV = 7 ", "CELESTE = 8 ", "GLOCKENSPIEL = 9 ", "MUSIC_BOX = 10 ",
+			"VIBRAPHONE = 11 ", "MARIMBA = 12 ", "XYLOPHONE = 13 ", "TUBULAR_BELL = 14 ",
+			"NOTHING = 15 ", "ORGAN = 16 ", "ORGAN2 = 17 ", "ORGAN3 = 18 ", "CHURCH_ORGAN = 19 ",
+			"REED_ORGAN = 20 ", "ACCORDION = 21 ", "HARMONICA = 22 ", "BANDNEON = 23 ",
+			"NYLON_GUITAR = 24 ", "STEEL_GUITAR = 25 ", "JAZZ_GUITAR = 26 ", "CLEAN_GUITAR = 27 ",
+			"MUTED_GUITAR = 28 ", "OVERDRIVE_GUITAR = 29 ", "DISTORTED_GUITAR = 30 ",
+			"GUITAR_HARMONICS = 31 ", "ACOUSTIC_BASS = 32 ", "FINGERED_BASS = 33 ",
+			"PICKED_BASS = 34 ", "FRETLESS_BASS = 35 ", "SLAP_BASS = 36 ", "SLAP_BASS_2 = 37 ",
+			"SYNTH_BASS = 38 ", "SYNTH_BASS_2 = 39 ", "VIOLIN = 40 ", "VIOLA = 41 ", "CELLO = 42 ",
+			"CONTRABASS = 43 ", "TREMOLO_STRINGS = 44 ", "PIZZICATO_STRINGS = 45 ", "HARP = 46 ",
+			"TIMPANI = 47 ", "STRINGS = 48 ", "STRING_ENSEMBLE_2 = 49 ", "SYNTH_STRINGS = 50 ",
+			"SLOW_STRINGS = 51 ", "AAH = 52 ", "OOH = 53 ", "SYNVOX = 54 ", "ORCHESTRA_HIT = 55 ",
+			"TRUMPET = 56 ", "TROMBONE = 57 ", "TUBA = 58 ", "MUTED_TRUMPET = 59 ",
+			"FRENCH_HORN = 60 ", "BRASS = 61 ", "SYNTH_BRASS = 62 ", "SYNTH_BRASS_2 = 63 ",
+			"SOPRANO_SAX = 64 ", "ALTO_SAX = 65 ", "SAXOPHONE = 66 ", "BARITONE_SAX = 67 ",
+			"OBOE = 68 ", "ENGLISH_HORN = 69 ", "BASSOON = 70 ", "CLARINET = 71 ", "PICCOLO = 72 ",
+			"FLUTE = 73 ", "RECORDER = 74 ", "PAN_FLUTE = 75 ", "BOTTLE_BLOW = 76 ",
+			"SHAKUHACHI = 77 ", "WHISTLE = 78 ", "OCARINA = 79 ", "GMSQUARE_WAVE = 80 ",
+			"GMSAW_WAVE = 81 ", "SYNTH_CALLIOPE = 82 ", "CHIFFER_LEAD = 83 ", "CHARANG = 84 ",
+			"SOLO_VOX = 85 ", "WHOKNOWS1 = 86 ", "WHOKNOWS2 = 87 ", "FANTASIA = 88 ",
+			"WARM_PAD = 89 ", "POLYSYNTH = 90 ", "SPACE_VOICE = 91 ", "BOWED_GLASS = 92 ",
+			"METAL_PAD = 93 ", "HALO_PAD = 94 ", "SWEEP_PAD = 95 ", "ICE_RAIN = 96 ",
+			"SOUNDTRACK = 97 ", "CRYSTAL = 98 ", "ATMOSPHERE = 99 ", "BRIGHTNESS = 100 ",
+			"GOBLIN = 101 ", "ECHO_DROPS = 102 ", "STAR_THEME = 103 ", "SITAR = 104 ",
+			"BANJO = 105 ", "SHAMISEN = 106 ", "KOTO = 107 ", "KALIMBA = 108 ", "BAGPIPES = 109 ",
+			"FIDDLE = 110 ", "SHANNAI = 111 ", "TINKLE_BELL = 112 ", "AGOGO = 113 ",
+			"STEEL_DRUMS = 114 ", "WOODBLOCK = 115 ", "TAIKO = 116 ", "TOM = 117 ",
+			"SYNTH_DRUM = 118 ", "REVERSE_CYMBAL = 119 ", "FRETNOISE = 120 ", "BREATHNOISE = 121 ",
+			"NATURE = 122 ", "BIRD = 123 ", "TELEPHONE = 124 ", "HELICOPTER = 125 ",
+			"APPLAUSE = 126 ", "GUNSHOT = 127 " };
 	
-	public static final String[] BASS_INST_NAMES = { "PIANO = 0", "BRIGHT_ACOUSTIC = 1",
-			"EPIANO = 4", "OOH = 53", "SYNVOX = 54", "FLUTE = 73", "RECORDER = 74",
-			"PAN_FLUTE = 75", "SYNTH_CALLIOPE = 82", "SOLO_VOX = 85", "SPACE_VOICE = 91",
-			"ECHO_DROPS = 102" };
+	public static final String[] BASS_INST_NAMES = { "PIANO = 0 ", "BRIGHT_ACOUSTIC = 1 ",
+			"EPIANO = 4 ", "OOH = 53 ", "SYNVOX = 54 ", "FLUTE = 73 ", "RECORDER = 74 ",
+			"PAN_FLUTE = 75 ", "SYNTH_CALLIOPE = 82 ", "SOLO_VOX = 85 ", "SPACE_VOICE = 91 ",
+			"ECHO_DROPS = 102 " };
 	
-	public static final String[] CHORD_INST_NAMES = { "PIANO = 0", "BRIGHT_ACOUSTIC = 1",
-			"EPIANO = 4", "CELESTE = 8", "MUSIC_BOX = 10", "VIBRAPHONE = 11", "MARIMBA = 12",
-			"XYLOPHONE = 13", "ORGAN = 16", "ORGAN2 = 17", "STEEL_GUITAR = 25", "CLEAN_GUITAR = 27",
-			"ACOUSTIC_BASS = 32", "FINGERED_BASS = 33", "PICKED_BASS = 34", "FRETLESS_BASS = 35",
-			"SLAP_BASS = 36", "TREMOLO_STRINGS = 44", "PIZZICATO_STRINGS = 45", "HARP = 46",
-			"STRINGS = 48", "STRING_ENSEMBLE_2 = 49", "AAH = 52", "BASSOON = 70",
-			"FANTASIA = 88", };
+	public static final String[] CHORD_INST_NAMES = { "EPIANO = 4 ", "ORGAN = 16 ", "ORGAN2 = 17 ",
+			"ACOUSTIC_BASS = 32 ", "TREMOLO_STRINGS = 44 ", "STRINGS = 48 ",
+			"STRING_ENSEMBLE_2 = 49 ", "AAH = 52 ", "BASSOON = 70 " };
 	
-	public static final String[] PLUCK_INST_NAMES = { "PIANO = 0", "BRIGHT_ACOUSTIC = 1",
-			"HONKYTONK = 3", "EPIANO2 = 5", "CELESTE = 8", "MUSIC_BOX = 10", "VIBRAPHONE = 11",
-			"MARIMBA = 12", "XYLOPHONE = 13", "TUBULAR_BELL = 14", "NOTHING = 15",
-			"STEEL_GUITAR = 25", "CLEAN_GUITAR = 27", "ACOUSTIC_BASS = 32", "FINGERED_BASS = 33",
-			"PICKED_BASS = 34", "FRETLESS_BASS = 35", "SLAP_BASS = 36", "PIZZICATO_STRINGS = 45",
-			"HARP = 46", "FANTASIA = 88", "BANJO = 105", "SHAMISEN = 106", "KOTO = 107",
-			"AGOGO = 113", "TAIKO = 116" };
+	public static final String[] PLUCK_INST_NAMES = { "BRIGHT_ACOUSTIC = 1 ", "HONKYTONK = 3 ",
+			"EPIANO2 = 5 ", "CELESTE = 8 ", "MUSIC_BOX = 10 ", "VIBRAPHONE = 11 ", "MARIMBA = 12 ",
+			"XYLOPHONE = 13 ", "TUBULAR_BELL = 14 ", "NOTHING = 15 ", "STEEL_GUITAR = 25 ",
+			"CLEAN_GUITAR = 27 ", "ACOUSTIC_BASS = 32 ", "FINGERED_BASS = 33 ", "PICKED_BASS = 34 ",
+			"FRETLESS_BASS = 35 ", "SLAP_BASS = 36 ", "PIZZICATO_STRINGS = 45 ", "HARP = 46 ",
+			"FANTASIA = 88 " };
 	
-	public static final String[] LONG_INST_NAMES = { "ORGAN = 16", "ORGAN2 = 17", "REED_ORGAN = 20",
-			"ACCORDION = 21", "HARMONICA = 22", "BANDNEON = 23", "VIOLIN = 40", "VIOLA = 41",
-			"CELLO = 42", "CONTRABASS = 43", "TREMOLO_STRINGS = 44", "STRINGS = 48",
-			"STRING_ENSEMBLE_2 = 49", "SLOW_STRINGS = 51", "TRUMPET = 56", "TROMBONE = 57",
-			"TUBA = 58", "FRENCH_HORN = 60", "BRASS = 61", "SOPRANO_SAX = 64", "ALTO_SAX = 65",
-			"BARITONE_SAX = 67", "OBOE = 68", "ENGLISH_HORN = 69", "BASSOON = 70", "CLARINET = 71",
-			"PICCOLO = 72", "RECORDER = 74", "BOTTLE_BLOW = 76", "SPACE_VOICE = 91",
-			"BOWED_GLASS = 92", "METAL_PAD = 93", "HALO_PAD = 94", "SWEEP_PAD = 95" };
+	public static final String[] LONG_INST_NAMES = { "ORGAN = 16 ", "ORGAN2 = 17 ",
+			"REED_ORGAN = 20 ", "ACCORDION = 21 ", "HARMONICA = 22 ", "BANDNEON = 23 ",
+			"VIOLIN = 40 ", "VIOLA = 41 ", "CELLO = 42 ", "CONTRABASS = 43 ",
+			"TREMOLO_STRINGS = 44 ", "STRINGS = 48 ", "STRING_ENSEMBLE_2 = 49 ",
+			"SLOW_STRINGS = 51 ", "TRUMPET = 56 ", "TROMBONE = 57 ", "TUBA = 58 ",
+			"FRENCH_HORN = 60 ", "BRASS = 61 ", "SOPRANO_SAX = 64 ", "ALTO_SAX = 65 ",
+			"BARITONE_SAX = 67 ", "OBOE = 68 ", "ENGLISH_HORN = 69 ", "BASSOON = 70 ",
+			"CLARINET = 71 ", "PICCOLO = 72 ", "RECORDER = 74 ", "BOTTLE_BLOW = 76 ",
+			"SPACE_VOICE = 91 ", "BOWED_GLASS = 92 ", "METAL_PAD = 93 ", "HALO_PAD = 94 ",
+			"SWEEP_PAD = 95 " };
 	
-	public static final String[] DRUM_INST_NAMES = { "KICK = 36", "SNARE = 38", "CLOSED_HH = 42",
-			"CYMBAL = 53", "TOM = 60" };
+	public static final String[] DRUM_INST_NAMES = { "BASSKICK = 35 ", "KICK = 36 ", "SNARE = 38 ",
+			"EL. SNARE = 40 ", "CLOSED_HH = 42 ", "RIDE = 53 ", "RIM = 60 " };
 	
 	
 	public static List<Integer> getInstNumbers(String[] instArray) {
-		return Arrays.asList(instArray).stream().map(e -> Integer.valueOf(e.split(" = ")[1]))
+		return Arrays.asList(instArray).stream().map(e -> Integer.valueOf(e.split(" = ")[1].trim()))
 				.collect(Collectors.toList());
 	}
 	
@@ -321,8 +359,9 @@ public class MidiUtils {
 			allInstruments.addAll(Arrays.asList(pool));
 		}
 		List<String> allInstrumentsSorted = new ArrayList<>(allInstruments);
-		Collections.sort(allInstrumentsSorted, (o1, o2) -> Integer.valueOf(o1.split(" = ")[1])
-				.compareTo(Integer.valueOf(o2.split(" = ")[1])));
+		Collections.sort(allInstrumentsSorted,
+				(o1, o2) -> Integer.valueOf(o1.split(" = ")[1].trim())
+						.compareTo(Integer.valueOf(o2.split(" = ")[1].trim())));
 		return allInstrumentsSorted.toArray(new String[] {});
 	}
 	
@@ -330,32 +369,38 @@ public class MidiUtils {
 			"DRUMKIT3 = 3" };
 	
 	public static final List<Integer> DRUM_KIT_NUMBERS = Arrays.asList(DRUM_KITS).stream()
-			.map(e -> Integer.valueOf(e.split(" = ")[1])).collect(Collectors.toList());
+			.map(e -> Integer.valueOf(e.split(" = ")[1].trim())).collect(Collectors.toList());
 	
 	public enum POOL {
-		PLUCK, LONG, CHORD, BASS, ALL;
+		PLUCK, LONG, CHORD, BASS, DRUM, ALL;
 	}
 	
-	public static final Map<POOL, String[]> INST_POOLS = new HashMap<>();
+	public static Map<POOL, String[]> INST_POOLS = new HashMap<>();
 	static {
+		initNormalInsts();
+	}
+	
+	public static void initNormalInsts() {
 		INST_POOLS.put(POOL.PLUCK, PLUCK_INST_NAMES);
 		INST_POOLS.put(POOL.LONG, LONG_INST_NAMES);
-		INST_POOLS.put(POOL.CHORD, CHORD_INST_NAMES);
+		INST_POOLS.put(POOL.CHORD, LONG_INST_NAMES);
 		INST_POOLS.put(POOL.BASS, BASS_INST_NAMES);
-		INST_POOLS.put(POOL.ALL, combineInstrumentPools(PLUCK_INST_NAMES, CHORD_INST_NAMES,
-				BASS_INST_NAMES, LONG_INST_NAMES));
+		INST_POOLS.put(POOL.DRUM, DRUM_INST_NAMES);
+		INST_POOLS.put(POOL.ALL, INSTRUMENTS_NAMES);
 	}
 	
-	public static Integer getInstByIndex(int index, String[] instPool) {
-		List<Integer> instPoolNumbers = getInstNumbers(instPool);
-		return instPoolNumbers.get(index);
+	public static void initAllInsts() {
+		INST_POOLS.put(POOL.PLUCK, INSTRUMENTS_NAMES);
+		INST_POOLS.put(POOL.LONG, INSTRUMENTS_NAMES);
+		INST_POOLS.put(POOL.CHORD, INSTRUMENTS_NAMES);
+		INST_POOLS.put(POOL.BASS, INSTRUMENTS_NAMES);
+		INST_POOLS.put(POOL.DRUM, DRUM_INST_NAMES);
+		INST_POOLS.put(POOL.ALL, INSTRUMENTS_NAMES);
 	}
 	
-	public static void selectJComboBoxByInst(JComboBox<String> choice, String[] instPool,
-			Integer number) {
-		List<Integer> instPoolNumbers = getInstNumbers(instPool);
-		int index = instPoolNumbers.indexOf(number);
-		choice.setSelectedIndex(index);
+	public static Integer getInstByIndex(int index, POOL instPool) {
+		List<Integer> instPoolNumbers = getInstNumbers(INST_POOLS.get(instPool));
+		return instPoolNumbers.get(index % instPoolNumbers.size());
 	}
 	
 	public static void addAllToJComboBox(String[] choices, JComboBox<String> choice) {
